src/tests/testfiles/binary-operators/types-2.txt
testfiles/binary-operators/types-2.c:2:9: error: invalid operands to comparison '==' (have 'char' and 'char []')
'a' == "B";
    ^
